--- a/css/style.css
+++ b/css/style.css
@@ -6,22 +6,130 @@ body{
 }
 
 
-header{
 
-    padding: 200px;
+
+
+#navbar{
+    display: block;
+    position: fixed;
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    bottom: 0;
+    padding: 30px;
 }
+
+
+ nav ul li {
+    display: inline-block;
+
+}
+
+ nav ul li a {
+
+
+    padding: 0 20px;
+
+
+    text-decoration: none;
+    font-size: 24px ;
+    color: #00afaf;
+}
+
+#welcome-section{
+
+    z-index: 1;
+    top: 0;
+
+    background-image: url("https://cdn.wonderfulengineering.com/wp-content/uploads/2016/01/nature-wallpapers-38.jpg");
+    background-repeat: no-repeat ;
+    background-position: center;
+    background-size: cover;
+
+    margin-top: 0;
+    padding-top: 0;
+
+    height: 100vh;
+    /* line-height: 100vh; */
+
+}
+
+
 h1,
 h2
-{color: #00afaf;
+{  color: antiquewhite;
    text-align: center;
    font-weight: 900;
 
 }
 
+h1{
+    padding:  200px;
+    font-size: 50px;
+
+}
+
+@media screen and (max-width: 64rem){
+
+    h1{
+
+       font-size: 30px;
+    }
+
+    header nav ul li {
+
+        display: block;
+    }
+
+}
+
+#projects{
+    margin-top: 60px ;
+
+    text-align: center;
+
+}
+
 .project-tile {
-    background-color: #f9f7d4;
+
+    display: inline-block;
+    padding: 80px;
+
+    border-radius: 100px;
+    text-align: left;
+}
+
+.project-tile img{
+    display: block;
+    text-align: center;
+    margin-bottom: 15px;
+    width: 50%;
 }
 
 .project-tile a {
-    color: red;
+    color:  darkcyan;
+
+}
+
+
+footer{
+
+    text-align: center;
+    padding: 20px;
+    background-color: darkcyan;
+    border-radius: 20px;
+}
+
+footer a{
+
+    color: antiquewhite;
+    font-size: 30px;
+
+}
+
+footer a:hover{
+
+    color: brown;
+    font-size: 20px;
 }
